@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: cdrom.cc,v 1.70 2004-08-22 16:23:34 vruppert Exp $
+// $Id: cdrom.cc,v 1.71 2004-08-23 09:39:45 vruppert Exp $
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2002  MandrakeSoft S.A.
@@ -185,6 +185,48 @@ static HINSTANCE hASPI = NULL;
 
 #define BX_CD_FRAMESIZE 2048
 #define CD_FRAMESIZE	2048
+
+// READ_TOC_EX structure(s) and #defines
+
+#define CDROM_READ_TOC_EX_FORMAT_TOC      0x00
+#define CDROM_READ_TOC_EX_FORMAT_SESSION  0x01
+#define CDROM_READ_TOC_EX_FORMAT_FULL_TOC 0x02
+#define CDROM_READ_TOC_EX_FORMAT_PMA      0x03
+#define CDROM_READ_TOC_EX_FORMAT_ATIP     0x04
+#define CDROM_READ_TOC_EX_FORMAT_CDTEXT   0x05
+
+#define IOCTL_CDROM_BASE              FILE_DEVICE_CD_ROM
+#define IOCTL_CDROM_READ_TOC_EX       CTL_CODE(IOCTL_CDROM_BASE, 0x0015, METHOD_BUFFERED, FILE_READ_ACCESS)
+
+typedef struct _CDROM_READ_TOC_EX {
+    UCHAR Format    : 4;
+    UCHAR Reserved1 : 3; // future expansion
+    UCHAR Msf       : 1;
+    UCHAR SessionTrack;
+    UCHAR Reserved2;     // future expansion
+    UCHAR Reserved3;     // future expansion
+} CDROM_READ_TOC_EX, *PCDROM_READ_TOC_EX;
+
+typedef struct _TRACK_DATA {
+    UCHAR Reserved;
+    UCHAR Control : 4;
+    UCHAR Adr : 4;
+    UCHAR TrackNumber;
+    UCHAR Reserved1;
+    UCHAR Address[4];
+} TRACK_DATA, *PTRACK_DATA;
+
+typedef struct _CDROM_TOC_SESSION_DATA {
+    // Header
+    UCHAR Length[2];  // add two bytes for this field
+    UCHAR FirstCompleteSession;
+    UCHAR LastCompleteSession;
+    // One track, representing the first track
+    // of the last finished session
+    TRACK_DATA TrackData[1];
+} CDROM_TOC_SESSION_DATA, *PCDROM_TOC_SESSION_DATA;
+
+// End READ_TOC_EX structure(s) and #defines
 
 #else // all others (Irix, Tru64)
 #include <sys/types.h>
@@ -479,7 +521,7 @@ cdrom_interface::cdrom_interface(char *dev)
 
 void
 cdrom_interface::init(void) {
-  BX_DEBUG(("Init $Id: cdrom.cc,v 1.70 2004-08-22 16:23:34 vruppert Exp $"));
+  BX_DEBUG(("Init $Id: cdrom.cc,v 1.71 2004-08-23 09:39:45 vruppert Exp $"));
   BX_INFO(("file = '%s'",path));
 }
 
@@ -509,12 +551,11 @@ cdrom_interface::insert_cdrom(char *dev)
   if ( (path[1] == ':') && (strlen(path) == 2) )
   {
     if(osinfo.dwPlatformId == VER_PLATFORM_WIN32_NT) {
-      // Use direct device access under windows NT/2k
+      // Use direct device access under windows NT/2k/XP
 
       // With all the backslashes it's hard to see, but to open D: drive 
       // the name would be: \\.\d:
       sprintf(drive, "\\\\.\\%s", path);
-      using_file = 0;
       BX_INFO (("Using direct access for cdrom."));
       // This trick only works for Win2k and WinNT, so warn the user of that.
     } else {
@@ -589,7 +630,7 @@ cdrom_interface::insert_cdrom(char *dev)
   } else {
     hFile=CreateFile((char *)&drive, GENERIC_READ, FILE_SHARE_READ, NULL, OPEN_EXISTING, FILE_FLAG_RANDOM_ACCESS, NULL); 
     if (hFile !=(void *)0xFFFFFFFF)
-    fd=1;
+      fd=1;
   }
 #elif defined(__APPLE__)
       if(strcmp(path, "drive") == 0)
@@ -725,70 +766,93 @@ if (using_file == 0)
 
 
   bx_bool
-cdrom_interface::read_toc(uint8* buf, int* length, bx_bool msf, int start_track)
+cdrom_interface::read_toc(uint8* buf, int* length, bx_bool msf, int start_track, int format)
 {
   // Read CD TOC. Returns false if start track is out of bounds.
 
   if (fd < 0) {
     BX_PANIC(("cdrom: read_toc: file not open."));
-    }
+    return false;
+  }
 
 #if defined(WIN32)
-  if (1) { // This is a hack and works okay if there's one rom track only
+  if (!isWindowsXP || using_file) { // This is a hack and works okay if there's one rom track only
 #else
   if (using_file) {
 #endif
-    // From atapi specs : start track can be 0-63, AA
-    if ((start_track > 1) && (start_track != 0xaa)) 
-      return false;
-
-    buf[2] = 1;
-    buf[3] = 1;
-
+    Bit32u blocks;
     int len = 4;
-    if (start_track <= 1) {
-      buf[len++] = 0; // Reserved
-      buf[len++] = 0x14; // ADR, control
-      buf[len++] = 1; // Track number
-      buf[len++] = 0; // Reserved
 
-      // Start address
-      if (msf) {
-        buf[len++] = 0; // reserved
-        buf[len++] = 0; // minute
-        buf[len++] = 2; // second
-        buf[len++] = 0; // frame
-      } else {
-        buf[len++] = 0;
-        buf[len++] = 0;
-        buf[len++] = 0;
-        buf[len++] = 16; // logical sector 0
-      }
+    switch (format) {
+      case 0:
+        // From atapi specs : start track can be 0-63, AA
+        if ((start_track > 1) && (start_track != 0xaa))
+          return false;
+
+        buf[2] = 1;
+        buf[3] = 1;
+
+        if (start_track <= 1) {
+          buf[len++] = 0; // Reserved
+          buf[len++] = 0x14; // ADR, control
+          buf[len++] = 1; // Track number
+          buf[len++] = 0; // Reserved
+
+          // Start address
+          if (msf) {
+            buf[len++] = 0; // reserved
+            buf[len++] = 0; // minute
+            buf[len++] = 2; // second
+            buf[len++] = 0; // frame
+          } else {
+            buf[len++] = 0;
+            buf[len++] = 0;
+            buf[len++] = 0;
+            buf[len++] = 16; // logical sector 0
+          }
+        }
+
+        // Lead out track
+        buf[len++] = 0; // Reserved
+        buf[len++] = 0x16; // ADR, control
+        buf[len++] = 0xaa; // Track number
+        buf[len++] = 0; // Reserved
+
+        blocks = capacity();
+
+        // Start address
+        if (msf) {
+          buf[len++] = 0; // reserved
+          buf[len++] = (uint8)(((blocks + 150) / 75) / 60); // minute
+          buf[len++] = (uint8)(((blocks + 150) / 75) % 60); // second
+          buf[len++] = (uint8)((blocks + 150) % 75); // frame;
+        } else {
+          buf[len++] = (blocks >> 24) & 0xff;
+          buf[len++] = (blocks >> 16) & 0xff;
+          buf[len++] = (blocks >> 8) & 0xff;
+          buf[len++] = (blocks >> 0) & 0xff;
+        }
+
+        buf[0] = ((len-2) >> 8) & 0xff;
+        buf[1] = (len-2) & 0xff;
+
+        break;
+
+      case 1:
+        // multi session stuff - emulate a single session only
+        buf[0] = 0;
+        buf[1] = 0x0a;
+        buf[2] = 1;
+        buf[3] = 1;
+        for (unsigned i = 0; i < 8; i++)
+          buf[4+i] = 0;
+        len = 12;
+        break;
+
+      default:
+        BX_PANIC(("cdrom: read_toc: unknown format"));
+        return false;
     }
-
-    // Lead out track
-    buf[len++] = 0; // Reserved
-    buf[len++] = 0x16; // ADR, control
-    buf[len++] = 0xaa; // Track number
-    buf[len++] = 0; // Reserved
-
-    uint32 blocks = capacity();
-
-    // Start address
-    if (msf) {
-      buf[len++] = 0; // reserved
-      buf[len++] = (uint8)(((blocks + 150) / 75) / 60); // minute
-      buf[len++] = (uint8)(((blocks + 150) / 75) % 60); // second
-      buf[len++] = (uint8)((blocks + 150) % 75); // frame;
-    } else {
-      buf[len++] = (blocks >> 24) & 0xff;
-      buf[len++] = (blocks >> 16) & 0xff;
-      buf[len++] = (blocks >> 8) & 0xff;
-      buf[len++] = (blocks >> 0) & 0xff;
-    }
-
-    buf[0] = ((len-2) >> 8) & 0xff;
-    buf[1] = (len-2) & 0xff;
 
     *length = len;
 
@@ -797,13 +861,25 @@ cdrom_interface::read_toc(uint8* buf, int* length, bx_bool msf, int start_track)
   // all these implementations below are the platform-dependent code required
   // to read the TOC from a physical cdrom.
 #ifdef WIN32
+  if (isWindowsXP)
   {
-/*     #define IOCTL_CDROM_BASE                 FILE_DEVICE_CD_ROM
-     #define IOCTL_CDROM_READ_TOC         CTL_CODE(IOCTL_CDROM_BASE, 0x0000, METHOD_BUFFERED, FILE_READ_ACCESS)
-     unsigned long iBytesReturned;
-     DeviceIoControl(hFile, IOCTL_CDROM_READ_TOC, NULL, 0, NULL, 0, &iBytesReturned, NULL);       */
-    BX_ERROR (("WARNING: read_toc is not implemented, just returning length=1"));
-    *length = 1;
+
+    // This only works with WinXP
+    CDROM_READ_TOC_EX input;
+    memset(&input, 0, sizeof(input));
+    input.Format = format;
+    input.Msf = msf;
+    input.SessionTrack = start_track;
+
+    // We have to allocate a chunk of memory to make sure it is aligned on a sector base.
+    UCHAR *data = (UCHAR *) VirtualAlloc(NULL, 2048*2, MEM_COMMIT|MEM_RESERVE, PAGE_READWRITE);
+    unsigned long iBytesReturned;
+    DeviceIoControl(hFile, IOCTL_CDROM_READ_TOC_EX, &input, sizeof(input), data, 804, &iBytesReturned, NULL);
+    // now copy it to the users buffer and free our buffer
+    memcpy(buf, data, iBytesReturned);
+    VirtualFree(data, 0, MEM_RELEASE);
+    *length = iBytesReturned;
+
     return true;
   }
 #elif __linux__ || defined(__sun)
